# Intelligent_product_review_analyzer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  dashboard-deployment.yaml  dashboard-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
src/review_analyzer/: __init__.py
src/review_analyzer/api/: dependencies.py  main.py  schemas.py
src/review_analyzer/api/routes/: analyze.py  health.py
src/review_analyzer/core/: config.py  exceptions.py  logging.py
src/review_analyzer/dashboard/: app.py  scrapling.py
src/review_analyzer/nlp/: aspects.py  cleaner.py  entities.py  lexicons.py  normalizer.py  sentiment.py  spacy_loader.py  tagger.py  tokenizer.py
src/review_analyzer/pipeline/: analyzer.py  schemas.py
src/review_analyzer/training/: sentiment_model.py  vectorizer.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_aspects.py  test_cleaner.py  test_entities.py  test_pipeline.py  test_tokenizer.py
