[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-product-review-analyzer"
version = "0.1.0"
description = "FastAPI and Streamlit app for aspect-level product review analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "streamlit>=1.32,<2.0",
    "spacy>=3.7,<4.0",
    "nltk>=3.8,<4.0",
    "scikit-learn>=1.4,<2.0",
    "scipy>=1.12,<2.0",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "joblib>=1.3,<2.0",
    "requests>=2.31,<3.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "huggingface-hub>=1.13.0",
    "matplotlib>=3.10.9",
    "xgboost>=3.2.0",
    "catboost>=1.2.10",
    "gensim>=4.4.0",
    "optuna>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
    "anyio>=4.3,<5.0",
    "ruff>=0.3,<1.0",
]
data = [
    "datasets>=2.18,<3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
